DASH-95 DASH-67 DASH-84 More details of switching views for News section and Calendar section. Fixed problems in Hide/Show and Star/Unstar.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312998 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -35,7 +35,10 @@
 	                        From site
 	                    </th>
 	                    <th class="four">
-	                        Action
+	                        Star
+	                    </th>
+	                    <th class="five">
+	                        Hide
 	                    </th>
 	                </tr>
 	            </thead>
@@ -55,10 +58,10 @@
 	                    <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
 	                </td>
 	                <td class="action four">
-	                	<div wicket:id="actionPanel">
-		                    <a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
-		                    <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
-	                    </div>
+	                	<a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
+	                </td>
+	                <td class="action five">
+		                <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
 	                </td>
 	            </tr>
 	        </table>
