--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -25,16 +25,22 @@
 	            <thead>
 	                <tr class="header">
 	                    <th scope="col" class="one">
-	                        What
+	                        Hidden
 	                    </th>
 	                    <th scope="col" class="two">
-	                        From where
+	                        What
 	                    </th>
 	                    <th scope="col" class="three">
+	                        From where
+	                    </th>
+	                    <th scope="col" class="four">
 	                        When
 	                    </th>
-	                    <th class="four">
-	                        Action
+	                    <th class="five">
+	                        Star
+	                    </th>
+	                    <th class="six">
+	                        Hide
 	                    </th>
 	                </tr>
 	            </thead>
@@ -54,10 +60,10 @@
 	                    <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
 	                </td>
 	                <td class="action five">
-	                	<div wicket:id="actionPanel">
-		                    <a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
-		                    <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
-	                    </div>
+	                	<a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
+	                </td>
+	                <td class="action six">
+		                <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
 	                </td>
 	            </tr>
 	        </table>
