--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -13,6 +13,7 @@
                 </script>
                 <script type="text/javascript" src="js/dashboard.js">
                 </script>
+                <div id="messagePanel" style="display:none"></div>
                 <!--
                 <div class="portletMainWrap">
                 <div id="message">
@@ -29,7 +30,6 @@
                 </div>
                 </div>
                 -->
-                
                 <div id="calendarPanel"  wicket:id="calendarPanel">
                 </div>
                 
