DASH-105 - iconify star and hide links
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313006 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -64,9 +64,17 @@
                             <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
                         </td>
                         <td class="action five">
+                            <!--
+                            <a  href="#" title="Unstar this"><img alt="Unstar this" src="/dashboard-tool/css/img/star-inact.png" /></a>
+                            <a  href="#" title="Star this"><img alt="Star this"  src="/dashboard-tool/css/img/star-act.png" /></a>
+                            -->
                             <a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
                         </td>
                         <td class="action six">
+                            <!--
+                            <a  href="#" title="Show this"><img alt="Show this" src="/dashboard-tool/css/img/accept.png" /></a>
+                            <a  href="#" title="Hide this"><img alt="Hide this"  src="/dashboard-tool/css/img/cancel.png" /></a>
+                            -->                            
                             <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
                         </td>
                     </tr>
