--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -17,6 +17,7 @@
                                 <a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a>
                             </li>
                         </ul>
+                        <span wicket:id="newsLinksCount">[[ cero puntos ]]</span>
                     </td>
                     <td style="width:30%" class="pagerCell">
                         <div class="pager" wicket:id="newsNavigator">
@@ -24,7 +25,7 @@
                     </td>
                 </tr>
             </table>
-            <div class="panel">
+            <div class="panel" wicket:id="haveLinks">
                 <table cellspacing="0" id="news" class="news" summary="List of recent events. Column 1: link to details on item. Column 2: link to site where event took place. Column 3: date and time when event took place. Column 4: list of options managing items of this type or origin." border="0">
                     <thead>
                         <tr class="header">
@@ -59,6 +60,7 @@
                         </td>
                         <td class="tab three">
                             <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
+                            <span wicket:id="itemLabel" class="dashboardLabel">[Item Label]</span>
                         </td>
                         <td class="four">
                             <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
@@ -80,6 +82,9 @@
                     </tr>
                 </table>
             </div>
+	        <div wicket:id="haveNoLinks">
+	            <p wicket:id="message">[[ I got nothing for ya. ]]</p>
+	        </div>
         </div>
     </wicket:panel>
 </html>
