--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -65,18 +65,14 @@
                             <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
                         </td>
                         <td class="action four">
-                            <!--
-                            <a  href="#" title="Unstar this"><img alt="Unstar this" src="/dashboard-tool/css/img/star-inact.png" /></a>
-                            <a  href="#" title="Star this"><img alt="Star this"  src="/dashboard-tool/css/img/star-act.png" /></a>
-                            -->
-                            <a href="#" wicket:id="starringAction"><span wicket:id="starringActionLabel">[ Star This]</span></a>
+                            <a href="#" wicket:id="starringAction">
+                            	<img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" />
+                            </a>
                         </td>
                         <td class="action five">
-                            <!--
-                            <a  href="#" title="Show this"><img alt="Show this" src="/dashboard-tool/css/img/accept.png" /></a>
-                            <a  href="#" title="Hide this"><img alt="Hide this"  src="/dashboard-tool/css/img/cancel.png" /></a>
-                            -->
-                            <a href="#" wicket:id="hidingAction"><span wicket:id="hidingActionLabel">[ Hide This]</span></a>
+                            <a href="#" wicket:id="hidingAction">
+                            	<img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" />
+                            </a>
                         </td>
                     </tr>
                 </table>
