DASH-101 - add needed rendering for labels, some adjustments
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313010 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -20,11 +20,11 @@
                                 <a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a>
                             </li>
                         </ul>
-                        <span wicket:id="calendarLinksCount">[[ cero puntos ]]</span>
                     </td>
                     <td style="width:30%" class="pagerCell">
-                        <div class="pager" style="float:right" wicket:id="calendarNavigator">
-                        </div>
+                        <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>
+                        <span class="pager" style="float:right" wicket:id="calendarNavigator">
+                        </span>
                     </td>
                 </tr>
             </table>
