--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -17,11 +17,12 @@
                                 <a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a>
                             </li>
                         </ul>
-                        <span wicket:id="newsLinksCount">[[ cero puntos ]]</span>
+                        
                     </td>
                     <td style="width:30%" class="pagerCell">
-                        <div class="pager" wicket:id="newsNavigator">
-                        </div>
+                        <span class="itemCount instruction" wicket:id="newsLinksCount">[[ cero puntos ]]</span>
+                        <span class="pager" wicket:id="newsNavigator">
+                        </span>
                     </td>
                 </tr>
             </table>
