DASH-80 Add the entity icons in the CalendarLinksPanel and NewsLinksPanel.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313018 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -58,6 +58,7 @@
                             <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                         </td>
                         <td class="tab two">
+                            <img wicket:id="icon" />
                             <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
                             <span wicket:id="itemLabel" class="dashboardLabel">[Item Label]</span>
                         </td>
