--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -60,6 +60,7 @@
                             <span wicket:id="newsTime">[news time]</span>
                         </td>
                         <td class="tab three">
+                        	<img wicket:id="icon" />
                             <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
                             <span wicket:id="itemLabel" class="dashboardLabel">[Item Label]</span>
                         </td>
