--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -60,9 +60,9 @@
                             <span wicket:id="newsTime">[news time]</span>
                         </td>
                         <td class="tab three">
-                        	<img wicket:id="icon" />
+                        	<img wicket:id="icon" class="itemIcon"/>
                             <a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
-                            <span wicket:id="itemLabel" class="dashboardLabel">[Item Label]</span>
+                            <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
                         </td>
                         <td class="four">
                             <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
