DASH-86 Added div at top of page for MOTD
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313046 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -30,6 +30,9 @@
                 </div>
                 </div>
                 -->
+                <div id="motdPanel"  wicket:id="motdPanel">
+                </div>
+                
                 <div id="calendarPanel"  wicket:id="calendarPanel">
                 </div>
                 
