DASH-86 - render MOTD, add session cookie dismiss functionality
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313048 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -30,7 +30,7 @@
                 </div>
                 </div>
                 -->
-                <div id="motdPanel"  wicket:id="motdPanel">
+                <div id="motdPanel"  wicket:id="motdPanel" class="motdPanel">
                 </div>
                 
                 <div id="calendarPanel"  wicket:id="calendarPanel">
@@ -56,6 +56,7 @@
                         setupMenus();
                         setupLang(); //evaluate the language held in #lang-holder for use in the js
                         setupIcons();
+                        setupDismissMOTD();
                         
                     });
                 </script>
