--- a/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
@@ -2,16 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <wicket:panel>
         <div id="motdTextDiv" wicket:id="motdTextDiv">
-            <table class="listHeader" cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td style="width:50%;padding:0">
-                        <h3 class="withNav">Message of the Day</h3>
-                  </td>
-                    <td style="width:50%" class="pagerCell">
-                    </td>
-                </tr>
-            </table>
-            <h3 wicket:id="motdTitle">[[ MOTD Title ]]</h3>
+           <a id="motdTextDivDismiss" href="#" title="Hide this message for the session">x</a> 
+           <h3>Message of the day</h3> 
+            <h4 wicket:id="motdTitle">[[ MOTD Title ]]</h4>
             <div id="motdText" class="motdText" wicket:id="motdText">
             	[[ Text of latest MOTD ]]
             </div>
