DASH-115 Added a style attribute so menu links are hidden (for now)
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313052 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
@@ -6,7 +6,7 @@
 	</head>     
 	<body>
 		<div class="portletBody">
-			<ul class="navIntraTool actionToolbar" role="menu">
+			<ul class="navIntraTool actionToolbar" role="menu" style="display:none;">
 				<li class="firstToolBarItem" role="menuitem">
 					<span>
 						<a wicket:id="dashboardLink">
