DASH-137 Added ajax behavior to DashboardPage. Post an ajax request to update the item.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313072 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -63,6 +63,9 @@
                 <div wicket:id="callbackUrl" class="callBackUrl skip">
                     [callback url]
                 </div>
+                <div wicket:id="dashActionHandler" class="dashActionHandler skip">
+                	[[ dashActionHandler ]]
+                </div>
             </div>
             </div>
         </wicket:extend>
