DASH-114 Show attachments for MOTD.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313091 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
@@ -8,6 +8,7 @@
             <div id="motdText" class="motdText" wicket:id="motdText">
             	[[ Text of latest MOTD ]]
             </div>
+            <ul><li wicket:id="attachments"><a href="#" wicket:id="attachment-link">[[ one attachment ]]</a></li></ul>
         </div>
 
     	
