DASH-103 Changed labels for Calendar panel and default tab in News panel.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313097 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -3,7 +3,7 @@
     <wicket:panel>
         <div id="activeCalendarItems" wicket:id="calendarLinksDiv" class="mainPanel">
             <div class="listHeader">
-                <h3 class="withNav">Calendar</h3>
+                <h3 class="withNav" wicket:id="calendarTitle">[[ Calendar ]]</h3>
                 <ul class="tabPanel">
                     <li wicket:id="upcomingCalendarTab"ap>
                         <a href="#" wicket:id="link"><span wicket:id="label">[ Upcoming ]</span></a>
