--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -3,7 +3,7 @@
     <wicket:panel>
         <div id="activeNewsItems" wicket:id="newsLinksDiv" class="mainPanel">
             <div class="listHeader">
-                <h3 class="withNav">Recent Activity</h3>
+                <h3 class="withNav" wicket:id="newsTitle">[[ Recent Activity ]]</h3>
                 <ul class="tabPanel">
                     <li wicket:id="currentNewsTab">
                         <a href="#" wicket:id="link"><span wicket:id="label">[ Current ]</span></a>
