DASH-147 Added "offset" element for rows showing grouped items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313107 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -49,6 +49,7 @@
                             <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
                             <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                             <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
+                            <span class="offset" style="display:none">0</span>
                         </td>
                         <td class="two date">
                             <span wicket:id="newsTime">[news time]</span>
